--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -73,7 +73,7 @@
 
 .s-boton
 {
-    width: 100%;
+  width: 100%;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
   border-radius: 5px;
@@ -82,6 +82,8 @@
   text-decoration-line: none;  
   margin-top: 1.5rem;
   margin-bottom: -3rem;
+  display: flex;
+  justify-content: center;
 }
 
 .s-vinculo
