--- a/src/components/Registrarse.css
+++ b/src/components/Registrarse.css
@@ -32,7 +32,7 @@
     color: #2eb1e5;
     font-weight: bold;
     text-decoration-line: none;
-    margin-top: 1rem;
+    margin-right: 2.5rem;
 }
 
 
@@ -55,7 +55,8 @@ form h4{
 .o-campo{
     width: 20.75rem;
     padding: 0.5rem;
-    margin-top: -0.25rem; 
+    margin-top: 0.5rem; 
+    margin-bottom: 1rem;
     font-family:'Poppins', sans-serif;
     font-weight: 400;
     font-size: 0.875rem; 
