--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -8,10 +8,11 @@
 
 .d-tittle-bar{
     width: 80%;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .d-tittle-bar img{
@@ -21,8 +22,9 @@
 
 .d-messages{
     width: 80%;
-    background-color: white;
-    box-shadow: 0px 1px 2px #00000036;
+    border-radius: 15px;
+    box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.14);
+    background-color: var(--white);
     height: 500px;
     display: flex;
 }
@@ -37,4 +39,5 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
+   
 }
