--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,11 @@
-
-
-.E-nav-container{
-    background-color: white;
+.e-navbar-container{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(255, 255, 255);
     padding: 1.5rem 4rem;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.08);
+    border: solid 1px rgba(0, 0, 0, 0);
+    
 }
 
 
@@ -62,10 +64,7 @@ figure img {
     position: relative;
 }
 
-.E-nav-container{
-    display: flex;
-    justify-content: space-between;
-}
+
 .E-derecha{
     display: flex;
     align-items: center;
