--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -8,7 +8,7 @@
 
 .d-tittle-bar{
     width: 80%;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,31 +20,31 @@
 }
 
 .d-Posts{
-    width: 76%;
-    background-color: white;
-    box-shadow: 0px 1px 2px #00000036;
+    width: 80%;
+    border-radius: 15px;
+    box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.14);
+    background-color: var(--white);
     display: flex;
-    padding: 0px 30px;
+    padding: 20px 30px;
 }
 
 .d-Posts label{
-    font-size: 10px;
+    font-size: 0.9rem;
     font-weight: 500;
     text-align: left;
-    margin: 10px 0px 7px 0px;
+    margin: 1.5rem 0px 7px 0px;
 }
 
 .d-buttons{
-    width: 250px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.d-tipo{
-    position: relative;
+.d-tipo{    
     right: 110px;
     margin: 0px 0px 10px 0px;
-    font-size: 10px;
+    font-size: 0.9rem;
     font-weight: 500;
 }
 
@@ -56,25 +56,27 @@
 }
 
 .d-content-inpt{
-    width: 400px;
+    width: 40%;
+    margin-right: 3rem;
+    margin-left: 4rem;
 }
 
 .d-btn{
     display: flex;
-    width: 75px;
-    height: 70px;
+    width: 8rem;
+    height: 6.5rem;
     border-radius: 5%;
     background-color: white;
     border: none;
     padding: 5px 0px;
-    font-size: 12px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.8rem;
     box-shadow: 0px 2px 8px #00000023;
     justify-content: space-evenly;
 }
 
 .d-column-inputs{
-    width: 250px;
-    padding: 20px;
+    width: 100%;     
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -82,7 +84,7 @@
 }
 
 .d-column-inputs input{
-    height: 20px;
+    height: 2rem;
     width: 100%;
     border: 1px solid #D1D6D8;
     border-radius: 5px;
@@ -102,10 +104,12 @@
 .d-section{
     padding-top: 30px;
     text-align: left;
+    width: 46%;
 }
 
 .d-section h1{
-    font-size: 10px;
+    font-size: 0.9rem;
+    margin-top: 1rem;
     font-weight: 500;  
     padding-bottom: 10px;  
 }
@@ -122,9 +126,40 @@
     justify-content: space-around;
     width: 150px;
     border: none;
+    border-radius: 5px;
     padding: 3px 0px;
     margin-top: 15px;
     font-size: 13px;
     font-weight: 500; 
     color: white;
+}
+
+.d-btn-pub
+{
+    background-color: #2EB1E5;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 150px;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 0px;
+    margin-top: 15px;
+    font-size: 13px;
+    font-weight: 500; 
+    color: white;
+    margin-left: 24rem;
+    margin-top: 10rem;
+}
+
+.d-img-icon
+{
+    width: 2.5rem;
+}
+
+.p-navbar
+{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 3px 18px 8px rgba(0, 0, 0, 0.61);
+    border: solid 1px rgba(0, 0, 0, 0);
 }
