--- a/src/CaracteristicInfoCard.css
+++ b/src/CaracteristicInfoCard.css
@@ -12,8 +12,10 @@
 .text1{
     margin-bottom: -1rem;
     font-size: 0.8rem;
+    font-weight: 500;
 }
 
 .text2{
     font-size: 0.8rem;
+    font-weight: 500;
 }
