--- a/src/Carrousel.css
+++ b/src/Carrousel.css
@@ -1,7 +1,7 @@
 .Carrousel{
     display: flex; 
     background-color: #EEEEEE;   
-    box-shadow: 0px 3px 6px rgb(128, 128, 128);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.16);
     height: 4rem;
     width: auto;
     justify-content: space-between;
