--- a/src/InfoCard.css
+++ b/src/InfoCard.css
@@ -1,8 +1,8 @@
 .InfoCard{
     height: 25.5rem;
     background-color: white;
-    box-shadow: 0px 2px 3px rgb(128, 128, 128);
-    padding: 0rem 2rem 0rem 2rem;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.16);
+    padding: 1rem 2rem 0rem 2rem;
     
 }
 
