--- a/src/components/CaracteristicInfoCard.css
+++ b/src/components/CaracteristicInfoCard.css
@@ -10,14 +10,16 @@
 }
 
 .j-text1{
-    margin-bottom: -1rem;
+    margin-bottom: -0.2rem;
     font-size: 0.8rem;
     font-weight: 500;
+    color: black;
 }
 
 .j-text2{
     font-size: 0.8rem;
     font-weight: 500;
+    color: black;
 }
 
 .j-IconInfoCard{
