--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -8,8 +8,10 @@
 
 .d-profile-pt{
     border-radius: 50%;
-    height: 40px;
-    margin: 0px 10px 0px 30px;
+    height: 50px;
+    width: 50px;
+    margin: 9px 10px 0px 30px;
+    object-fit: cover;
 }
 
 .d-row{
