--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -41,3 +41,10 @@
     justify-content: center;
    
 }
+
+.p-navbar
+{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 3px 30px 8px rgba(0, 0, 0, 0.61);
+    border: solid 6px rgba(0, 0, 0, 0);
+}
