--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -73,6 +73,7 @@
     font-size: 0.8rem;
     box-shadow: 0px 2px 8px #00000023;
     justify-content: space-evenly;
+    font-family: 'Poppins', sans-serif;  
 }
 
 .d-column-inputs{
@@ -127,11 +128,12 @@
     width: 150px;
     border: none;
     border-radius: 5px;
-    padding: 3px 0px;
+    padding: 6px 6px;
     margin-top: 15px;
     font-size: 13px;
     font-weight: 500; 
     color: white;
+    font-family: 'Poppins', sans-serif;  
 }
 
 .d-btn-pub
@@ -143,13 +145,14 @@
     width: 150px;
     border: none;
     border-radius: 5px;
-    padding: 8px 0px;
+    padding: 8px 6px;
     margin-top: 15px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 500; 
     color: white;
     margin-left: 24rem;
     margin-top: 10rem;
+    font-family: 'Poppins', sans-serif;  
 }
 
 .d-img-icon
@@ -160,6 +163,6 @@
 .p-navbar
 {
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 3px 18px 8px rgba(0, 0, 0, 0.61);
-    border: solid 1px rgba(0, 0, 0, 0);
+    box-shadow: 0 3px 30px 8px rgba(0, 0, 0, 0.61);
+    border: solid 6px rgba(0, 0, 0, 0);
 }
