--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -14,6 +14,8 @@
     width: 16.25rem;
     height: 9.1875rem;
     object-fit: cover;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 .card-content h4{
